<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_extract"
        android:icon="@drawable/ic_action_extract"
        android:orderInCategory="100"
        android:title="@string/action_extract" />

    <item
        android:id="@+id/action_open_link"
        android:icon="@drawable/ic_action_open_link"
        android:orderInCategory="101"
        android:title="@string/open_on_google_play" />

    <item
        android:id="@+id/action_launch_app"
        android:icon="@drawable/ic_action_launch_app"
        android:orderInCategory="102"
        android:title="@string/action_launch_app" />

    <item
        android:id="@+id/action_uninstall_app"
        android:icon="@drawable/ic_action_uninstall_app"
        android:orderInCategory="103"
        android:title="@string/action_uninstall_app" />


    <item
        android:id="@+id/action_copy_package_name"
        android:icon="@drawable/ic_action_copy_text"
        android:orderInCategory="104"
        android:title="@string/action_copy_package_name" />

    <item
        android:id="@+id/action_app_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="105"
        android:title="@string/action_app_info" />

    <item
        android:id="@+id/action_manifest"
        android:icon="@drawable/ic_manifest_explorer"
        android:orderInCategory="105"
        android:title="@string/action_app_manifest" />

    <item
        android:id="@+id/action_save_icon"
        android:icon="@drawable/ic_download"
        android:orderInCategory="106"
        android:title="@string/action_save_icon" />

    <item
        android:id="@+id/action_share_icon"
        android:icon="@drawable/ic_share"
        android:orderInCategory="107"
        android:title="@string/action_export_icon" />

    <!--    <item-->
    <!--        android:id="@+id/action_share_app"-->
    <!--        android:orderInCategory="104"-->
    <!--        android:title="@string/action_share_app" />-->

    <!--<item-->
    <!--android:id="@+id/action_share_link"-->
    <!--android:orderInCategory="101"-->
    <!--android:title="Поделиться ссылкой" />-->

</menu>