<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_zip_all_assets"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:orderInCategory="104"
        android:title="ZIP All Assets" />

    <item
        android:id="@+id/action_read_file"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:orderInCategory="104"
        android:title="@string/action_read_file" />

    <item
        android:id="@+id/action_save_file"
        android:icon="@drawable/ic_download"
        android:orderInCategory="106"
        android:title="@string/action_save_file" />

    <item
        android:id="@+id/action_share_icon"
        android:icon="@drawable/ic_share"
        android:orderInCategory="107"
        android:title="@string/action_share_file" />

</menu>